--- a/templates/login.html
+++ b/templates/login.html
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+{% extends 'base.html' %}
+{% block title %}Iniciar sesion{% endblock %}
+{% block content %}
 <body>
     <div class="formulario">
 <h1>Inicio de sesion</h1>
@@ -30,4 +25,4 @@
 </form>
     </div>
 </body>
-</html>
+{% endblock %}
