--- a/templates/index.html
+++ b/templates/index.html
@@ -1,18 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>FlaskBlog</title>
-</head>
-<body>
-   <h1>Welcome to libreria</h1>
-   <a href="/login">
-
-      <button>login</button>
-   </a>
-   <a href="/signup">
-
-     <button>registrar</button>
-   </a>
-</body>
-</html>
+{% extends 'base.html' %}
+{% block title %}Inicio{% endblock %}
+{% block content %}
+<h1>Welcome to libreria</h1>
+<a href="/login">
+	<button>login</button>
+</a>
+<a href="/signup">
+	<button>registrar</button>
+</a>
+{% endblock %}
