--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -21,10 +21,10 @@
         <input type="password" required>
         
     </div>
-    <div class="recordar"><a href="/send-email">¿Olvidaste tu contraseña?</a></div>
+    <div class="recordar"><a href="/auth/send-email">¿Olvidaste tu contraseña?</a></div>
      <input type="submit" value="iniciar">
      <div class="registrarse">
-        quieres <a href="/signup">registrarse</a>
+        quieres <a href="/auth/signup">registrarse</a>
      </div>
 
 </form>
