--- a/templates/auth/send-email.html
+++ b/templates/auth/send-email.html
@@ -17,7 +17,7 @@
 
             </div>
             <div class="form_button">
-                <a href="/login">salir</a>
+                <a href="/auth/login">salir</a>
              <button>Enviar link</button>
             </div>
         </form>
