--- a/templates/auth/signup.html
+++ b/templates/auth/signup.html
@@ -32,11 +32,11 @@
                 <input type="password" placeholder="contraseña" input type="password" required>
                 
             </div>
-            <p>Tienes una cuenta? <a href="login">Inicia sesion</a> </p>
+            <p>Tienes una cuenta? <a href="/auth/login">Inicia sesion</a> </p>
         </div>
         <div class="btn-field">
             <input type="submit" value="registrate">
-             <button id="signIn" type="button" class="disable"> <a  href="login">Login</a>  </button>
+             <button id="signIn" type="button" class="disable"> <a  href="/auth/login">Login</a>  </button>
         </div>
     </form>
 
