--- a/templates/index.html
+++ b/templates/index.html
@@ -6,11 +6,11 @@
 </head>
 <body>
    <h1>Welcome to libreria</h1>
-   <a href="/login">
+   <a href="auth/login">
 
       <button>login</button>
    </a>
-   <a href="/signup">
+   <a href="auth/signup">
 
      <button>registrar</button>
    </a>
