--- a/templates/index.html
+++ b/templates/index.html
@@ -2,10 +2,10 @@
 {% block title %}Inicio{% endblock %}
 {% block content %}
   <h1>Welcome to libreria</h1>
-  <a href="/login">
+  <a href="/auth/login">
     <button>login</button>
   </a>
-  <a href="/signup">
+  <a href="/auth/signup">
     <button>registrar</button>
   </a>
 {% endblock %}
