--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -16,10 +16,10 @@
         <input type="password" required>
         
     </div>
-    <div class="recordar"><a href="/auth/send-email">¿Olvidaste tu contraseña?</a></div>
+    <div class="recordar"><a href={{ url_for('auth.recordar') }}>¿Olvidaste tu contraseña?</a></div>
      <input type="submit" value="iniciar">
      <div class="registrarse">
-        quieres <a href="/auth/signup">registrarse</a>
+        quieres <a href= {{ url_for('auth.signup') }}>registrarse</a>
      </div>
 
 </form>
