--- a/templates/base.html
+++ b/templates/base.html
@@ -8,8 +8,8 @@
   <nav>
     <ul>
       <li><a href="/">Inicio</a></li>
-      <li><a href="/login">Login</a></li>
-      <li><a href="/signup">Registrarse</a></li>
+      <li><a href={{ url_for('auth.login') }}>Login</a></li>
+      <li><a href={{ url_for('auth.signup') }}>Registrarse</a></li>
     </ul>
   </nav>
 	{% block content %}{% endblock %}
